@@ -1023,27 +1023,28 @@ describe 'Asciidoctor::PDF::Converter - Section' do
     (expect content_text[:page_number]).to be 2
   end
 
-  it 'should allow arrange_section to be reimplemented to keep section with content that follows' do
+  it 'should allow arrange_heading to be reimplemented to always keep section with content that follows' do
     backend = nil
     create_class (Asciidoctor::Converter.for 'pdf') do
       register_for (backend = %(pdf#{object_id}).to_sym)
-      def arrange_section sect, title, opts
-        return if opts[:hidden]
+      def arrange_heading node, title, opts
         orphaned = nil
         dry_run single_page: true do
           start_page = page
           theme_font :heading, level: opts[:level] do
             if opts[:part]
-              layout_part_title sect, title, opts
+              layout_part_title node, title, opts
             elsif opts[:chapterlike]
-              layout_chapter_title sect, title, opts
+              layout_chapter_title node, title, opts
             else
-              layout_general_heading sect, title, opts
+              layout_general_heading node, title, opts
             end
           end
           if page == start_page
             page.tare_content_stream
-            orphaned = stop_if_first_page_empty { traverse sect }
+            orphaned = stop_if_first_page_empty do
+              node.context == :section ? (traverse node) : (convert (siblings = node.parent.blocks)[(siblings.index node) + 1])
+            end
           end
         end
         start_new_page if orphaned
